found a broken style that was correct on a previous commit

--- a/css/about.css
+++ b/css/about.css
@@ -88,6 +88,10 @@ nav a {
     width: 800px;
 }
 
+hr {
+    border: 0.5px dashed black;
+}
+
 .middle-content h2 {
     padding: 0 2%;
     margin-bottom: 0;
